# Cross-Compass-Skills-Evaluation-Test

./: .gitignore  README.md
image-processor/: README.md  main.py  pyproject.toml  tutorial.py
image-processor/examples/: 7guis_04_timer.py  run_multiplesubprocess.py  run_subprocess.py
image-processor/src/image_processor_app/: components.py  constants.py  main.py
image-processor/src/image_processor_app/components/: imageComponent.py  imageFolderComponent.py
image-processor/tests/: conftest.py  test_edit_image.py  test_main.py  test_scan_images.py
